[gd_scene load_steps=9 format=2]

[ext_resource path="res://Entities/Legacy/Iceman/Iceman.gd" type="Script" id=1]
[ext_resource path="res://res/sfx/rolling.ogg" type="AudioStream" id=2]
[ext_resource path="res://Entities/Legacy/Iceman/Material_001.material" type="Material" id=3]
[ext_resource path="res://res/sfx/hit.ogg" type="AudioStream" id=4]

[sub_resource type="ArrayMesh" id=1]
resource_name = "Circle"
surfaces/0 = {
"aabb": AABB( -0.226927, -0.025, -1, 0.493737, 2, 2 ),
"array_data": PoolByteArray( 56, 51, 51, 190, 232, 45, 223, 61, 238, 255, 255, 190, 130, 1, 2, 0, 0, 89, 167, 127, 100, 48, 200, 54, 255, 53, 70, 190, 40, 46, 223, 61, 4, 0, 0, 63, 130, 1, 2, 0, 0, 89, 167, 127, 0, 0, 19, 57, 227, 30, 11, 190, 224, 204, 204, 188, 14, 153, 249, 52, 130, 1, 2, 0, 0, 89, 167, 127, 107, 42, 3, 56, 56, 51, 51, 190, 232, 45, 223, 61, 238, 255, 255, 190, 130, 1, 2, 0, 0, 89, 167, 127, 100, 48, 200, 54, 50, 51, 51, 190, 58, 51, 243, 62, 216, 179, 93, 63, 130, 1, 2, 0, 0, 89, 167, 127, 0, 0, 80, 58, 255, 53, 70, 190, 40, 46, 223, 61, 4, 0, 0, 63, 130, 1, 2, 0, 0, 89, 167, 127, 0, 0, 19, 57, 169, 95, 104, 190, 31, 51, 243, 62, 209, 179, 93, 191, 130, 1, 2, 0, 0, 89, 167, 127, 155, 51, 199, 54, 50, 51, 51, 190, 58, 51, 243, 62, 216, 179, 93, 63, 130, 1, 2, 0, 0, 89, 167, 127, 0, 0, 80, 58, 56, 51, 51, 190, 232, 45, 223, 61, 238, 255, 255, 190, 130, 1, 2, 0, 0, 89, 167, 127, 100, 48, 200, 54, 50, 51, 51, 190, 154, 153, 121, 63, 254, 255, 127, 191, 130, 1, 2, 0, 0, 89, 167, 127, 50, 53, 2, 56, 50, 51, 51, 190, 58, 51, 243, 62, 216, 179, 93, 63, 130, 1, 2, 0, 0, 89, 167, 127, 0, 0, 80, 58, 169, 95, 104, 190, 31, 51, 243, 62, 209, 179, 93, 191, 130, 1, 2, 0, 0, 89, 167, 127, 155, 51, 199, 54, 50, 51, 51, 190, 154, 153, 121, 63, 254, 255, 127, 191, 130, 1, 2, 0, 0, 89, 167, 127, 50, 53, 2, 56, 179, 95, 170, 189, 156, 153, 121, 63, 255, 255, 127, 63, 130, 1, 2, 0, 0, 89, 167, 127, 106, 42, 99, 59, 50, 51, 51, 190, 58, 51, 243, 62, 216, 179, 93, 63, 130, 1, 2, 0, 0, 89, 167, 127, 0, 0, 80, 58, 77, 30, 64, 190, 204, 204, 188, 63, 214, 179, 93, 191, 130, 1, 2, 0, 0, 89, 167, 127, 0, 54, 20, 57, 179, 95, 170, 189, 156, 153, 121, 63, 255, 255, 127, 63, 130, 1, 2, 0, 0, 89, 167, 127, 106, 42, 99, 59, 50, 51, 51, 190, 154, 153, 121, 63, 254, 255, 127, 191, 130, 1, 2, 0, 0, 89, 167, 127, 50, 53, 2, 56, 77, 30, 64, 190, 204, 204, 188, 63, 214, 179, 93, 191, 130, 1, 2, 0, 0, 89, 167, 127, 0, 54, 20, 57, 188, 112, 48, 190, 206, 204, 188, 63, 214, 179, 93, 63, 130, 1, 2, 0, 0, 89, 167, 127, 100, 48, 0, 60, 179, 95, 170, 189, 156, 153, 121, 63, 255, 255, 127, 63, 130, 1, 2, 0, 0, 89, 167, 127, 106, 42, 99, 59, 77, 30, 64, 190, 204, 204, 188, 63, 214, 179, 93, 191, 130, 1, 2, 0, 0, 89, 167, 127, 0, 54, 20, 57, 48, 51, 51, 190, 184, 166, 235, 63, 1, 0, 0, 63, 130, 1, 2, 0, 0, 89, 167, 127, 155, 51, 255, 59, 188, 112, 48, 190, 206, 204, 188, 63, 214, 179, 93, 63, 130, 1, 2, 0, 0, 89, 167, 127, 100, 48, 0, 60, 48, 51, 51, 190, 184, 166, 235, 63, 254, 255, 255, 190, 130, 1, 2, 0, 0, 89, 167, 127, 0, 54, 80, 58, 48, 51, 51, 190, 184, 166, 235, 63, 1, 0, 0, 63, 130, 1, 2, 0, 0, 89, 167, 127, 155, 51, 255, 59, 77, 30, 64, 190, 204, 204, 188, 63, 214, 179, 93, 191, 130, 1, 2, 0, 0, 89, 167, 127, 0, 54, 20, 57, 48, 51, 51, 190, 184, 166, 235, 63, 254, 255, 255, 190, 130, 1, 2, 0, 0, 89, 167, 127, 0, 54, 80, 58, 51, 203, 190, 189, 204, 204, 252, 63, 48, 189, 59, 51, 130, 1, 2, 0, 0, 89, 167, 127, 49, 53, 99, 59, 48, 51, 51, 190, 184, 166, 235, 63, 1, 0, 0, 63, 130, 1, 2, 0, 0, 89, 167, 127, 155, 51, 255, 59, 105, 48, 32, 62, 40, 46, 223, 61, 4, 0, 0, 63, 126, 255, 254, 0, 0, 89, 167, 127, 0, 54, 79, 58, 48, 51, 51, 62, 232, 45, 223, 61, 238, 255, 255, 190, 126, 255, 254, 0, 0, 89, 167, 127, 25, 56, 255, 59, 133, 71, 91, 62, 224, 204, 204, 188, 14, 153, 249, 52, 126, 255, 254, 0, 0, 89, 167, 127, 205, 54, 96, 59, 50, 51, 51, 62, 57, 51, 243, 62, 216, 179, 93, 63, 126, 255, 254, 0, 0, 89, 167, 127, 0, 54, 19, 57, 48, 51, 51, 62, 232, 45, 223, 61, 238, 255, 255, 190, 126, 255, 254, 0, 0, 89, 167, 127, 25, 56, 255, 59, 105, 48, 32, 62, 40, 46, 223, 61, 4, 0, 0, 63, 126, 255, 254, 0, 0, 89, 167, 127, 0, 54, 79, 58, 50, 51, 51, 62, 57, 51, 243, 62, 216, 179, 93, 63, 126, 255, 254, 0, 0, 89, 167, 127, 0, 54, 19, 57, 126, 13, 252, 61, 31, 51, 243, 62, 209, 179, 93, 191, 126, 255, 254, 0, 0, 89, 167, 127, 230, 56, 0, 60, 48, 51, 51, 62, 232, 45, 223, 61, 238, 255, 255, 190, 126, 255, 254, 0, 0, 89, 167, 127, 25, 56, 255, 59, 50, 51, 51, 62, 57, 51, 243, 62, 216, 179, 93, 63, 126, 255, 254, 0, 0, 89, 167, 127, 0, 54, 19, 57, 52, 51, 51, 62, 154, 153, 121, 63, 254, 255, 127, 191, 126, 255, 254, 0, 0, 89, 167, 127, 153, 57, 97, 59, 126, 13, 252, 61, 31, 51, 243, 62, 209, 179, 93, 191, 126, 255, 254, 0, 0, 89, 167, 127, 230, 56, 0, 60, 70, 155, 136, 62, 156, 153, 121, 63, 255, 255, 127, 63, 126, 255, 254, 0, 0, 89, 167, 127, 205, 54, 0, 56, 52, 51, 51, 62, 154, 153, 121, 63, 254, 255, 127, 191, 126, 255, 254, 0, 0, 89, 167, 127, 153, 57, 97, 59, 50, 51, 51, 62, 57, 51, 243, 62, 216, 179, 93, 63, 126, 255, 254, 0, 0, 89, 167, 127, 0, 54, 19, 57, 70, 155, 136, 62, 156, 153, 121, 63, 255, 255, 127, 63, 126, 255, 254, 0, 0, 89, 167, 127, 205, 54, 0, 56, 23, 72, 38, 62, 204, 204, 188, 63, 214, 179, 93, 191, 126, 255, 254, 0, 0, 89, 167, 127, 0, 58, 79, 58, 52, 51, 51, 62, 154, 153, 121, 63, 254, 255, 127, 191, 126, 255, 254, 0, 0, 89, 167, 127, 153, 57, 97, 59, 168, 245, 53, 62, 206, 204, 188, 63, 214, 179, 93, 63, 126, 255, 254, 0, 0, 89, 167, 127, 25, 56, 199, 54, 23, 72, 38, 62, 204, 204, 188, 63, 214, 179, 93, 191, 126, 255, 254, 0, 0, 89, 167, 127, 0, 58, 79, 58, 70, 155, 136, 62, 156, 153, 121, 63, 255, 255, 127, 63, 126, 255, 254, 0, 0, 89, 167, 127, 205, 54, 0, 56, 52, 51, 51, 62, 184, 166, 235, 63, 1, 0, 0, 63, 126, 255, 254, 0, 0, 89, 167, 127, 230, 56, 199, 54, 23, 72, 38, 62, 204, 204, 188, 63, 214, 179, 93, 191, 126, 255, 254, 0, 0, 89, 167, 127, 0, 58, 79, 58, 168, 245, 53, 62, 206, 204, 188, 63, 214, 179, 93, 63, 126, 255, 254, 0, 0, 89, 167, 127, 25, 56, 199, 54, 52, 51, 51, 62, 184, 166, 235, 63, 1, 0, 0, 63, 126, 255, 254, 0, 0, 89, 167, 127, 230, 56, 199, 54, 56, 51, 51, 62, 184, 166, 235, 63, 254, 255, 255, 190, 126, 255, 254, 0, 0, 89, 167, 127, 0, 58, 19, 57, 23, 72, 38, 62, 204, 204, 188, 63, 214, 179, 93, 191, 126, 255, 254, 0, 0, 89, 167, 127, 0, 58, 79, 58, 103, 128, 131, 62, 204, 204, 252, 63, 48, 189, 59, 51, 126, 255, 254, 0, 0, 89, 167, 127, 152, 57, 0, 56, 56, 51, 51, 62, 184, 166, 235, 63, 254, 255, 255, 190, 126, 255, 254, 0, 0, 89, 167, 127, 0, 58, 19, 57, 52, 51, 51, 62, 184, 166, 235, 63, 1, 0, 0, 63, 126, 255, 254, 0, 0, 89, 167, 127, 230, 56, 199, 54, 51, 203, 190, 189, 204, 204, 252, 63, 48, 189, 59, 51, 0, 122, 32, 0, 130, 0, 1, 127, 235, 48, 84, 48, 52, 51, 51, 62, 184, 166, 235, 63, 1, 0, 0, 63, 0, 122, 32, 0, 130, 0, 1, 127, 142, 46, 3, 20, 48, 51, 51, 190, 184, 166, 235, 63, 1, 0, 0, 63, 0, 122, 32, 0, 130, 0, 1, 127, 115, 49, 211, 23, 51, 203, 190, 189, 204, 204, 252, 63, 48, 189, 59, 51, 0, 122, 32, 0, 130, 0, 1, 127, 235, 48, 84, 48, 103, 128, 131, 62, 204, 204, 252, 63, 48, 189, 59, 51, 0, 122, 32, 0, 130, 0, 1, 127, 125, 45, 77, 48, 52, 51, 51, 62, 184, 166, 235, 63, 1, 0, 0, 63, 0, 122, 32, 0, 130, 0, 1, 127, 142, 46, 3, 20, 126, 13, 252, 61, 31, 51, 243, 62, 209, 179, 93, 191, 0, 167, 167, 0, 127, 0, 0, 127, 160, 51, 86, 48, 56, 51, 51, 190, 232, 45, 223, 61, 238, 255, 255, 190, 0, 167, 167, 0, 127, 0, 0, 127, 198, 49, 229, 23, 48, 51, 51, 62, 232, 45, 223, 61, 238, 255, 255, 190, 0, 167, 167, 0, 127, 0, 0, 127, 242, 51, 229, 23, 126, 13, 252, 61, 31, 51, 243, 62, 209, 179, 93, 191, 0, 167, 167, 0, 127, 0, 0, 127, 160, 51, 86, 48, 169, 95, 104, 190, 31, 51, 243, 62, 209, 179, 93, 191, 0, 167, 167, 0, 127, 0, 0, 127, 115, 49, 86, 48, 56, 51, 51, 190, 232, 45, 223, 61, 238, 255, 255, 190, 0, 167, 167, 0, 127, 0, 0, 127, 198, 49, 229, 23, 23, 72, 38, 62, 204, 204, 188, 63, 214, 179, 93, 191, 0, 32, 134, 0, 127, 0, 0, 127, 222, 51, 199, 54, 50, 51, 51, 190, 154, 153, 121, 63, 254, 255, 127, 191, 0, 32, 134, 0, 127, 0, 0, 127, 198, 49, 163, 52, 52, 51, 51, 62, 154, 153, 121, 63, 254, 255, 127, 191, 0, 32, 134, 0, 127, 0, 0, 127, 242, 51, 163, 52, 23, 72, 38, 62, 204, 204, 188, 63, 214, 179, 93, 191, 0, 32, 134, 0, 127, 0, 0, 127, 222, 51, 199, 54, 77, 30, 64, 190, 204, 204, 188, 63, 214, 179, 93, 191, 0, 32, 134, 0, 127, 0, 0, 127, 178, 49, 199, 54, 50, 51, 51, 190, 154, 153, 121, 63, 254, 255, 127, 191, 0, 32, 134, 0, 127, 0, 0, 127, 198, 49, 163, 52, 50, 51, 51, 190, 58, 51, 243, 62, 216, 179, 93, 63, 0, 167, 89, 0, 130, 255, 255, 127, 31, 53, 199, 54, 105, 48, 32, 62, 40, 46, 223, 61, 4, 0, 0, 63, 0, 167, 89, 0, 130, 255, 255, 127, 31, 52, 156, 52, 255, 53, 70, 190, 40, 46, 223, 61, 4, 0, 0, 63, 0, 167, 89, 0, 130, 255, 255, 127, 53, 53, 164, 52, 50, 51, 51, 190, 58, 51, 243, 62, 216, 179, 93, 63, 0, 167, 89, 0, 130, 255, 255, 127, 31, 53, 199, 54, 50, 51, 51, 62, 57, 51, 243, 62, 216, 179, 93, 63, 0, 167, 89, 0, 130, 255, 255, 127, 9, 52, 191, 54, 105, 48, 32, 62, 40, 46, 223, 61, 4, 0, 0, 63, 0, 167, 89, 0, 130, 255, 255, 127, 31, 52, 156, 52, 48, 51, 51, 190, 184, 166, 235, 63, 1, 0, 0, 63, 0, 89, 89, 0, 129, 0, 0, 127, 125, 45, 199, 54, 168, 245, 53, 62, 206, 204, 188, 63, 214, 179, 93, 63, 0, 89, 89, 0, 129, 0, 0, 127, 109, 36, 163, 52, 188, 112, 48, 190, 206, 204, 188, 63, 214, 179, 93, 63, 0, 89, 89, 0, 129, 0, 0, 127, 116, 45, 163, 52, 48, 51, 51, 190, 184, 166, 235, 63, 1, 0, 0, 63, 0, 89, 89, 0, 129, 0, 0, 127, 125, 45, 199, 54, 52, 51, 51, 62, 184, 166, 235, 63, 1, 0, 0, 63, 0, 89, 89, 0, 129, 0, 0, 127, 143, 36, 199, 54, 168, 245, 53, 62, 206, 204, 188, 63, 214, 179, 93, 63, 0, 89, 89, 0, 129, 0, 0, 127, 109, 36, 163, 52, 52, 51, 51, 62, 154, 153, 121, 63, 254, 255, 127, 191, 0, 224, 134, 0, 127, 0, 0, 127, 242, 51, 163, 52, 169, 95, 104, 190, 31, 51, 243, 62, 209, 179, 93, 191, 0, 224, 134, 0, 127, 0, 0, 127, 115, 49, 86, 48, 126, 13, 252, 61, 31, 51, 243, 62, 209, 179, 93, 191, 0, 224, 134, 0, 127, 0, 0, 127, 160, 51, 86, 48, 52, 51, 51, 62, 154, 153, 121, 63, 254, 255, 127, 191, 0, 224, 134, 0, 127, 0, 0, 127, 242, 51, 163, 52, 50, 51, 51, 190, 154, 153, 121, 63, 254, 255, 127, 191, 0, 224, 134, 0, 127, 0, 0, 127, 198, 49, 163, 52, 169, 95, 104, 190, 31, 51, 243, 62, 209, 179, 93, 191, 0, 224, 134, 0, 127, 0, 0, 127, 115, 49, 86, 48, 56, 51, 51, 62, 184, 166, 235, 63, 254, 255, 255, 190, 0, 89, 167, 0, 130, 0, 0, 127, 114, 46, 159, 52, 77, 30, 64, 190, 204, 204, 188, 63, 214, 179, 93, 191, 0, 89, 167, 0, 130, 0, 0, 127, 115, 49, 199, 54, 23, 72, 38, 62, 204, 204, 188, 63, 214, 179, 93, 191, 0, 89, 167, 0, 130, 0, 0, 127, 142, 46, 195, 54, 56, 51, 51, 62, 184, 166, 235, 63, 254, 255, 255, 190, 0, 89, 167, 0, 130, 0, 0, 127, 114, 46, 159, 52, 48, 51, 51, 190, 184, 166, 235, 63, 254, 255, 255, 190, 0, 89, 167, 0, 130, 0, 0, 127, 101, 49, 163, 52, 77, 30, 64, 190, 204, 204, 188, 63, 214, 179, 93, 191, 0, 89, 167, 0, 130, 0, 0, 127, 115, 49, 199, 54, 255, 53, 70, 190, 40, 46, 223, 61, 4, 0, 0, 63, 0, 134, 32, 0, 130, 0, 254, 127, 53, 53, 164, 52, 133, 71, 91, 62, 224, 204, 204, 188, 14, 153, 249, 52, 0, 134, 32, 0, 130, 0, 254, 127, 242, 51, 69, 48, 227, 30, 11, 190, 224, 204, 204, 188, 14, 153, 249, 52, 0, 134, 32, 0, 130, 0, 254, 127, 15, 53, 85, 48, 255, 53, 70, 190, 40, 46, 223, 61, 4, 0, 0, 63, 0, 134, 32, 0, 130, 0, 254, 127, 53, 53, 164, 52, 105, 48, 32, 62, 40, 46, 223, 61, 4, 0, 0, 63, 0, 134, 32, 0, 130, 0, 254, 127, 31, 52, 156, 52, 133, 71, 91, 62, 224, 204, 204, 188, 14, 153, 249, 52, 0, 134, 32, 0, 130, 0, 254, 127, 242, 51, 69, 48, 188, 112, 48, 190, 206, 204, 188, 63, 214, 179, 93, 63, 0, 32, 122, 0, 129, 0, 0, 127, 116, 45, 163, 52, 70, 155, 136, 62, 156, 153, 121, 63, 255, 255, 127, 63, 0, 32, 122, 0, 129, 0, 0, 127, 0, 0, 86, 48, 179, 95, 170, 189, 156, 153, 121, 63, 255, 255, 127, 63, 0, 32, 122, 0, 129, 0, 0, 127, 89, 44, 86, 48, 188, 112, 48, 190, 206, 204, 188, 63, 214, 179, 93, 63, 0, 32, 122, 0, 129, 0, 0, 127, 116, 45, 163, 52, 168, 245, 53, 62, 206, 204, 188, 63, 214, 179, 93, 63, 0, 32, 122, 0, 130, 0, 0, 127, 109, 36, 163, 52, 70, 155, 136, 62, 156, 153, 121, 63, 255, 255, 127, 63, 0, 32, 122, 0, 129, 0, 0, 127, 0, 0, 86, 48, 103, 128, 131, 62, 204, 204, 252, 63, 48, 189, 59, 51, 0, 122, 224, 0, 130, 0, 1, 127, 125, 45, 77, 48, 48, 51, 51, 190, 184, 166, 235, 63, 254, 255, 255, 190, 0, 122, 224, 0, 130, 0, 1, 127, 101, 49, 163, 52, 56, 51, 51, 62, 184, 166, 235, 63, 254, 255, 255, 190, 0, 122, 224, 0, 130, 0, 1, 127, 114, 46, 159, 52, 103, 128, 131, 62, 204, 204, 252, 63, 48, 189, 59, 51, 0, 122, 224, 0, 130, 0, 1, 127, 125, 45, 77, 48, 51, 203, 190, 189, 204, 204, 252, 63, 48, 189, 59, 51, 0, 122, 224, 0, 130, 0, 1, 127, 235, 48, 84, 48, 48, 51, 51, 190, 184, 166, 235, 63, 254, 255, 255, 190, 0, 122, 224, 0, 130, 0, 1, 127, 101, 49, 163, 52, 48, 51, 51, 62, 232, 45, 223, 61, 238, 255, 255, 190, 0, 134, 224, 0, 130, 0, 254, 127, 31, 52, 0, 0, 227, 30, 11, 190, 224, 204, 204, 188, 14, 153, 249, 52, 0, 134, 224, 0, 130, 0, 254, 127, 15, 53, 85, 48, 133, 71, 91, 62, 224, 204, 204, 188, 14, 153, 249, 52, 0, 134, 224, 0, 130, 0, 254, 127, 242, 51, 69, 48, 48, 51, 51, 62, 232, 45, 223, 61, 238, 255, 255, 190, 0, 134, 224, 0, 130, 0, 254, 127, 31, 52, 0, 0, 56, 51, 51, 190, 232, 45, 223, 61, 238, 255, 255, 190, 0, 134, 224, 0, 130, 0, 254, 127, 53, 53, 27, 24, 227, 30, 11, 190, 224, 204, 204, 188, 14, 153, 249, 52, 0, 134, 224, 0, 130, 0, 254, 127, 15, 53, 85, 48, 179, 95, 170, 189, 156, 153, 121, 63, 255, 255, 127, 63, 0, 224, 122, 0, 130, 0, 0, 127, 89, 44, 86, 48, 50, 51, 51, 62, 57, 51, 243, 62, 216, 179, 93, 63, 0, 224, 122, 0, 129, 0, 0, 127, 143, 36, 229, 23, 50, 51, 51, 190, 58, 51, 243, 62, 216, 179, 93, 63, 0, 224, 122, 0, 130, 0, 0, 127, 125, 45, 229, 23, 179, 95, 170, 189, 156, 153, 121, 63, 255, 255, 127, 63, 0, 224, 122, 0, 130, 0, 0, 127, 89, 44, 86, 48, 70, 155, 136, 62, 156, 153, 121, 63, 255, 255, 127, 63, 0, 224, 122, 0, 130, 0, 0, 127, 0, 0, 86, 48, 50, 51, 51, 62, 57, 51, 243, 62, 216, 179, 93, 63, 0, 224, 122, 0, 129, 0, 0, 127, 143, 36, 229, 23 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97303,
"index_count": 0,
"material": ExtResource( 3 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 132
}

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.117748, 0.979307, 0.450173 )

[sub_resource type="CylinderShape" id=3]
radius = 2.15033
height = 0.990234

[sub_resource type="CylinderShape" id=4]
radius = 0.484006
height = 0.190311

[node name="Iceman" type="KinematicBody"]
collision_layer = 32768
collision_mask = 32768
script = ExtResource( 1 )

[node name="CoM" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )

[node name="Circle" type="MeshInstance" parent="CoM"]
transform = Transform( 0.6, 0, 0, 0, 0.499695, -0.0174497, 0, 0.0174497, 0.499695, 0, -0.5, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 2 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.03, 0.06, 0 )
enabled = true
cast_to = Vector3( 0, 0, 0.6 )
collision_mask = 32769

[node name="RayCast2" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, 0.893, 0 )
enabled = true
cast_to = Vector3( 0, 0, 0.6 )
collision_mask = 32769

[node name="GroundRayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0947186, 0.595914 )
enabled = true
cast_to = Vector3( 0, -0.2, 0 )

[node name="MoveSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
attenuation_model = 1
autoplay = true
max_distance = 8.0
out_of_range_mode = 1

[node name="HitSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
attenuation_model = 1
max_distance = 8.0
out_of_range_mode = 1

[node name="NearArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="NearArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 3 )

[node name="HitBox" type="Area" parent="."]
collision_mask = 9

[node name="CollisionShape" type="CollisionShape" parent="HitBox"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0, 0.496038, 0 )
shape = SubResource( 4 )

[node name="ThinkTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="body_entered" from="NearArea" to="." method="_on_NearArea_body_entered"]
[connection signal="body_exited" from="NearArea" to="." method="_on_NearArea_body_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="ThinkTimer" to="." method="_on_ThinkTimer_timeout"]
